testsuite/tests/indexed-types/should_fail/T14230a.stderr

T14230a.hs:13:14: error:
    • Expected kind ‘k -> *’, but ‘a’ has kind ‘*’
    • In the second argument of ‘CD’, namely ‘(a :: k -> *)’
      In the data instance declaration for ‘CD’
      In the instance declaration for ‘C (Maybe a)’
